--- a/MauiBlazor1/MauiBlazor1.csproj
+++ b/MauiBlazor1/MauiBlazor1.csproj
@@ -60,5 +60,9 @@
         <!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
     </ItemGroup>
+	
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+	</ItemGroup>
 
 </Project>
